# GenreMaster

./: .gitignore  PRD_1_Genre_Conditioned_Mastering.md  README.md  READY_FOR_TRAINING.md  TRAINING_LOGS.md  check_val_corruption.py  pyproject.toml  test_strict.py  test_validation.py
configs/: ablation.yaml  classifier.yaml  default.yaml  default_v2.yaml  gtzan.yaml  pretrain.yaml
experiments/: evaluate_classifier.py  evaluate_mastering.py  run_ablation.py  run_evaluation.py  run_main.py  run_pretrain.py  train_genre_classifier.py  train_v2.py
scripts/: monitor_training.py  plot_classifier_training.py  plot_training.py  validate_audio_files.py  validate_strict.py
src/: losses.py  utils.py
src/data/: __init__.py  fma.py  transforms.py
src/features/: extractor.py  signatures.py
src/models/: dsp_modules.py  encoder.py  film.py  genre_classifier.py  genre_embedding.py  genremaster.py  genremaster_v2.py  pretrained_classifier.py  resnet_genre_classifier.py
tests/: test_features.py  test_fma.py  test_genremaster.py  test_pipeline.py  test_utils.py
