[project]
name = "genremaster"
version = "0.1.0"
description = "Genre-Conditioned Automatic Music Mastering via Latent Conditioning"
authors = [{name = "Research Team", email = "research@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "pyloudnorm>=0.1.1",
    "pydub>=0.25.1",
    "tqdm>=4.65.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "einops>=0.6.1",
    "omegaconf>=2.3.0",
    "trackio[apple-gpu]>=0.1.0",
    "datasets>=2.14.0",
    "soundfile>=0.12.0",
    "torchmetrics>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
